# bnet

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  version.cmake
.github/workflows/: build.yml
example/: CMakeLists.txt
example/src/: client.cpp  server.cpp
lib/: CMakeLists.txt
lib/include/bnet/: address.hpp  connection.hpp  context.hpp  error.hpp  listener.hpp  socket.hpp
lib/src/: bnet.cpp  build_version.hpp.in  platform.hpp
